[tool.poetry]
name = "rpn-calculator"
version = "0.1.0"
description = "RPN Calculator with a web frontend"
authors = ["Nicolas Seiller"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
flask-cors = "^3.0.8"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
